test/valid/TestOr/FalseTrue.plume
/**
 * @author Vasco T. Vasconcelos
 * @version $Id: AbstractMethod.plume 615 2012-05-21 14:52:19Z vv $
 */
class FalseTrue extends Object is

	method main : () -> String is
		new TestOr().m(false, true)